k8s/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: golangproject
  labels:
    app: golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang     
  template:
    metadata:
      labels:
        app: golang
    spec:
      containers:
      - name: golangimage
        image: bharath143ongole/go-web-app:v2
        ports:
        - containerPort: 8080
