k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicegolang
  labels:
    app: golang
spec:
  ports:
  - port: 80              
    targetPort: 8080     
    protocol: TCP
  selector:
    app: golang
  type: NodePort
