k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-web-app.local
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicegolang   # Ensure this matches your service name
            port:
              number: 80
